Moved akka distribution task to root project.